fix(twitch): Make text on front page readable (#239)
* Update age selector color

* Bump version

--- a/styles/twitch/catppuccin.user.css
+++ b/styles/twitch/catppuccin.user.css
@@ -2,7 +2,7 @@
 @name           Twitch Catppuccin
 @namespace      github.com/catppuccin/userstyles/styles/twitch
 @homepageURL    https://github.com/catppuccin/userstyles/tree/main/styles/twitch
-@version        1.1.8
+@version        1.1.9
 @description    Soothing pastel theme for Twitch
 @author         Catppuccin
 @updateURL      https://github.com/catppuccin/userstyles/raw/main/styles/twitch/catppuccin.user.css
@@ -228,6 +228,27 @@
     }
 
     a.offline-recommendations-video-card p {
+      color: @text;
+    }
+
+    /* Front page warning sign */
+
+    div.content-overlay-gate__content[data-a-target="player-overlay-content-gate"]
+      div.content-overlay-icon
+      svg {
+      color: @red;
+    }
+
+    /* Front page age warning */
+
+    div.content-overlay-gate__content[data-a-target="player-overlay-content-gate"]
+      p.content-overlay-gate__allow-pointers {
+      color: @red !important;
+    }
+
+    /* Front page age selector */
+
+    div[data-a-target="player-overlay-age-gate-form"] select {
       color: @text;
     }
 
